# ten-pin-bowling-kata

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
