[tool.poetry]
name = "ten-pin-bowling-kata"
version = "0.1.0"
description = "A program to score a game of Ten-Pin Bowling."
authors = ["Pedro Calleja <pecalleja@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
